--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
             	<li>5주
    	<ol>
       <li><a href="https://leejooyung1.github.io/1009/blogin.html">blogin실습 </a></li>
+      <li><a href="https://leejooyung.github.io/1010/slogin.html">slogin html실습 </a></li>
+
      </ol>
           	</li>
   
